== 14 Aug 2023
gperftools 2.11 is out!

Few minor fixes since rc couple weeks ago. Plus couple notable
contributions:

* Artem Polyakov has contributed auto-detection of several MPI systems
  w.r.t. filenames used by HEAPPROFILE and CPUPROFILE environment
  variables. Also, we now support HEAPPROFILE_USE_PID and
  CPUPROFILE_USE_PID environment variables that force profile
  filenames to have pid appended. Which will be useful for some
  programs that fork for parallelism. See
  https://github.com/gperftools/gperftools/pull/1263 for details.

* Ken Raffenetti has extended MPI detection mentioned above with
  detection of MPICH system.

Thanks a lot!

== 31 July 2023
gperftools 2.11rc is out!

Most notable change is that Linux/aarch64 and Linux/riscv are now
fully supported. That is, all unit tests pass on those architectures
(previously the heap leak checker was broken).

Also notable is that heap leak checker support is officially
deprecated as of this release. All bug fixes from now are on a best
effort basis. For clarity we also declare that it is only expected to
work (for some definition of work) on Linux/x86 (all kinds),
Linux/aarch64, Linux/arm, Linux/ppc (untested as of this writing) and
Linux/mips (untested as well). While some functionality worked in the
past on BSDs, it was never fully functional; and will never be. We
strongly recommend everyone to switch to asan and friends.

For major internal changes it is also worth mentioning that we now
fully switched to C++-11 std::atomic. All custom OS- and arch-specific
atomic bits have been removed at last.

Another notable change is that mmap and sbrk hooks facility is now
no-op. We keep API and ABI for formal compatibility, but the calls to
add mmap/sbrk hooks do nothing and return an error (whenever possible
as part of API). There seem to be no users of it anyways, and mmap
replacement API that is part of that facility really screwed up 64-bit